# VRC-Worlds-Manager-v2-Custom

./: .gitignore  CHANGELOG_CUSTOM.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENCE  LICENSE_ADDITIONAL  OPEN_SOURCE_GUIDE.md  README.md  README_EN.md  README_JP.md  UPDATER_SETUP.md  changelog.json  eslint.config.mjs  package-lock.json  package.json  verify_json.py
src-tauri/: 2  Cargo.toml  build.rs  build_err.txt  check_error.txt  check_log.txt  check_log_utf8.txt  check_output.txt  check_output_final.txt  check_output_utf8.txt  check_result.txt  error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs
src-tauri/src/api/: common.rs  definitions.rs  mod.rs
src-tauri/src/api/auth/: definitions.rs  logic.rs  mod.rs
src-tauri/src/api/group/: definitions.rs  logic.rs  mod.rs
src-tauri/src/api/instance/: definitions.rs  logic.rs  mod.rs
src-tauri/src/api/invite/: definitions.rs  logic.rs  mod.rs
src-tauri/src/backup/: definitions.rs  logic.rs  mod.rs
src-tauri/src/changelog/: common.rs  definitions.rs
src-tauri/src/commands/: api_commands.rs  changelog.rs  data_commands.rs  folder_commands.rs  memo_commands.rs  mod.rs  open_folder_commands.rs  patreon_cache.rs  preferences_commands.rs  sort_commands.rs  update.rs  util_commands.rs  world_status_commands.rs
src-tauri/src/definitions/: custom_data.rs  entities.rs  mod.rs
src-tauri/src/logging/: definitions.rs  mod.rs  worker.rs
src-tauri/src/migration/: definitions.rs  logic.rs  mod.rs
src-tauri/src/services/: api_service.rs  delete_data.rs  encryption_service.rs  export_service.rs  file_service.rs  folder_manager.rs  initialize_service.rs  memo_manager.rs  mod.rs  share_service.rs  sorting_service.rs
src-tauri/src/updater/: update_handler.rs
src-tauri/windows/: hooks.nsi
(+101 files in other folders)
