[package]
name = "vrc-worlds-manager"
version = "1.3.0-2"
description = "A Tauri App"
authors = ["Raifa", "siloneco"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }
dotenv-build = "0.1.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0.0"
tempfile = "3.18.0"
state = "0.6.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
aes = "0.8"
cbc = "0.1"
base64 = "0.22.1"
reqwest = { version = "0.12.14", features = ["cookies"] }
tokio = "1.44.1"
wiremock = "0.6.3"
specta = {version = "=2.0.0-rc.22", features = ["uuid", "chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
ringbuffer = "0.15.0"
simplelog = "0.12.2"
time = "0.3.41"
rand = "0.9.1"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
tauri-plugin-deep-link = "2"
opener = "0.8.2"
semver = "1.0.26"
uuid = "1.17.0"
urlencoding = "2.1.3"
unicode-normalization = "0.1"
tauri-plugin-window-state = "2"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
